added hero item

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Knowledge Volt</title>
     <link rel="shortcut icon" href="./assets/Brain.png" type="image/x-icon">
     <link rel="stylesheet" href="./styles/style.css">
+    <script src="https://kit.fontawesome.com/fff25c06fa.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
@@ -20,9 +21,20 @@
         </nav>
         </nav>
     </header>
-    <main>
-        <section>
-
+    <section class="hero-bg">
+            <div>  
+                <button id="EA-btn">
+                    <h3><i class="fa-solid fa-circle-dot fawesome"></i>Early Access Now Open</h3>
+                </button>
+                <h1 class="hero-title">Structured Thinking,<H1 id="hero-title2">Not Just Note-Taking.</H1></h1>
+                <p id="hero-desciption">A private space to store notes, links, and learning summaries — 
+                    designed to <br>help you think clearly, connect ideas, and turn learning 
+                    into long-term knowledge.</p>
+                    <div id="hero-btns">
+                        <button id="sbyv-btn" ><h3>Start Building Your Vault <i class=" arrow fa-solid fa-arrow-right"></i></h3></button>
+                        <button id="shiw-btn"><h3><i class="fa-solid fa-play fontaw"></i> See How It Works</h3></button> 
+                    </div>
+            </div>
         </section>
     </main>
     <footer>
