2nd knowledge added

--- a/index.html
+++ b/index.html
@@ -67,8 +67,25 @@
                 </div>
             </div>
     </section>
+     <section>
+        <div id="knowledge">
+            <img src="./assets/knowledge.png" alt="">
+            <div>
+                <p style="color: #30B868; margin: 10px 0px;">THE SOLUTION</p>
+                <h1 id="knowledge-title">Your Second Brain,<br>Structured By Design.</h1>
+                <p style="margin: 15px 0px;">Personal Knowledge Vault isn't another note-taking app.<br> It's a thinking environment where every note, link, and summary <br> becomes part of an interconnected web of understanding.</p>
+                <div>
+                    <p><i class="fa-solid fa-circle-check check-icon"></i>Capture ideas with structure built-in from day one</p>
+                    <p><i class="fa-solid fa-circle-check check-icon"></i>Connect related concepts automatically as you write</p>
+                    <p><i class="fa-solid fa-circle-check check-icon"></i>Build lasting knowledge through reflection prompts</p>
+                    <p><i class="fa-solid fa-circle-check check-icon"></i>Find anything instantly with semantic search</p>
+                </div>
+            </div>
+        </div>
+    </section>
     <footer>
     </footer>
 </body>
 </html>
+
 
