--- a/index.html
+++ b/index.html
@@ -83,9 +83,16 @@
             </div>
         </div>
     </section>
+     <section id="GEA">
+        <h2 class="GEA-title">Ready To Think More Clearly?</h2>
+        <p>Join thousands of learners who are building their personal knowledge vaults.<br>Start free, no credit card required</p>
+        <button id="sbyv-btn" ><h3>Get Early Access<i class="fa-solid fa-arrow-right arrow"></i></h3></button>
+        <p>Free during early access • No credit card needed</p>
+    </section>
     <footer>
     </footer>
 </body>
 </html>
+
 
 
